modified:   .gitignore 	new file:   .vscode/settings.json 	modified:   README.md 	modified:   pyproject.toml 	modified:   reqiurements.txt 	deleted:    src/byebyelogger/colorizer.py 	renamed:    src/byebyelogger/byebyelogger.py -> src/byebyelogger/core/__init__.py 	new file:   src/byebyelogger/core/abstract.py 	new file:   src/byebyelogger/core/byebyelogger.py 	new file:   src/byebyelogger/core/repository.py 	new file:   src/byebyelogger/presets/__init__.py 	new file:   src/byebyelogger/presets/custom.py 	new file:   src/byebyelogger/presets/datascience.py 	new file:   src/byebyelogger/presets/default.py 	deleted:    src/byebyelogger/repository.py 	deleted:    src/byebyelogger/style.py 	new file:   src/byebyelogger/style/__init__.py 	new file:   src/byebyelogger/style/colorizer.py 	new file:   src/byebyelogger/style/constants.py 	modified:   tests/test.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dynamic = ["dependencies"]
 dependencies = {file = ["requirements.txt"]}
 
 [tool.setuptools.packages.find]
-where = ["src"]
+where = ["src/byebyelogger"]
 
 [project.urls]
 "Homepage" = "https://github.com/N4r0Bs/ByeByeLogger"
