modified:   .gitignore 	modified:   .vscode/settings.json 	deleted:    README.md 	deleted:    pyproject.toml 	modified:   requirements.txt 	new file:   setup.py 	new file:   src/README.md 	modified:   src/byebyelogger/__init__.py 	deleted:    src/byebyelogger/core/abstract.py 	deleted:    src/byebyelogger/core/byebyelogger.py 	modified:   src/byebyelogger/core/repository.py 	new file:   src/byebyelogger/logger.py 	new file:   src/byebyelogger/presets/class_method_based_preset.py 	deleted:    src/byebyelogger/presets/custom.py 	deleted:    src/byebyelogger/presets/datascience.py 	deleted:    src/byebyelogger/presets/default.py 	modified:   src/byebyelogger/style/__init__.py 	renamed:    src/byebyelogger/style/colorizer.py -> src/byebyelogger/style/color.py 	renamed:    src/byebyelogger/style/constants.py -> src/byebyelogger/style/format.py 	modified:   tests/test.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
     "python.analysis.extraPaths": [
+        "./src",
         "./src/byebyelogger",
-        "./src/byebyelogger/core",
-        "./src/byebyelogger/presets",
-        "./src/byebyelogger/style",
+        "./src/byebyelogger"
     ]
 }
